--- a/satnhap.html
+++ b/satnhap.html
@@ -13,7 +13,7 @@
       <div class="logo-container">
         <img src="logo/AULAC.png" alt="Logo Âu Lạc" class="logo">
       </div>
-      <h1>Công Cụ Tra Cứu Sát Nhập Tỉnh</h1>
+      <h1>Công Cụ Tra Cứu Sáp Nhập Tỉnh</h1>
       <p>Trà Vinh, Bến Tre, Vĩnh Long</p>
     </div>
   </header>
@@ -23,7 +23,7 @@
       <!-- Cột trái: phần form và kết quả -->
       <div class="left-column">
         <section id="selection" class="card">
-          <h3>Chọn Xã/Phường cũ để tìm Phường mới</h3>
+          <h3>Chọn xã/phường cũ:</h3>
           <label for="province-select">Chọn tỉnh:</label>
           <select id="province-select">
             <option value="">-- Chọn tỉnh --</option>
@@ -48,7 +48,7 @@
       <!-- Cột phải: khung bản đồ minh họa -->
       <div class="right-column">
         <section id="map" class="card">
-          <h3>Bản đồ minh họa</h3>
+          <h3>Bản đồ ranh giới của xã/phường cũ</h3>
           <div id="map-container">
             <p>Vui lòng chọn xã/phường cũ để xem bản đồ.</p>
           </div>
