--- a/satnhap.html
+++ b/satnhap.html
@@ -34,7 +34,7 @@
             <option value="">-- Chọn xã/phường --</option>
           </select>
 
-          <button id="find-btn" disabled>Tìm Xã/Phường mới</button>
+          <button id="find-btn" disabled>Tìm xã/phường mới</button>
         </section>
 
         <section id="result" class="card">
