--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
         <p class="dev-text">Dev: LEDAT</p>
         <div class="buttons">
             <a href="satnhap.html" class="button">Tra cứu sáp nhập tỉnh</a>
-            <a href="giatrican_noisuy.html" class="button">Tính giá trị cận nội suy</a>
             <a href="tinh_du_toan.html" class="button">Tính dự toán</a>
+            <a href="giatrican_noisuy.html" class="button">Tính giá trị cận nội suy</a>
+            <a href="phancong.html" class="button">Phân công ca trực</a>
             <a href="merge_pdf.html" class="button">Ghép file pdf</a>
             <a href="word2excel.html" class="button">Word sang Excel</a>
         </div>
