--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <h1>Bộ công cụ Âu Lạc</h1>
         <p class="dev-text">Dev: LEDAT</p>
         <div class="buttons">
+            <a href="tracnghiem.html" class="button">Ôn tập thi chứng chỉ</a>
             <a href="satnhap.html" class="button">Tra cứu sáp nhập tỉnh</a>
             <a href="tinh_du_toan.html" class="button">Tính dự toán</a>
             <a href="giatrican_noisuy.html" class="button">Tính giá trị cận nội suy</a>
