- update source code

--- a/tracnghiem.html
+++ b/tracnghiem.html
@@ -76,11 +76,11 @@
                 <div class="question-text" id="questionText"></div>
                 <div class="options" id="optionsContainer"></div>
                 <div class="buttons">
-                    <button id="submitBtn" class="btn btn-primary" disabled>Xác nhận đáp án</button>
-                    <button id="nextBtn" class="btn btn-secondary" style="display: none;">Câu tiếp theo >></button>
-                    <button onclick="backToSelection()" class="btn" style="background: #6c757d; color: white; margin-left: auto;">
+                    <button onclick="backToSelection()" class="btn" style="background: #6c757d; color: white; margin-right: auto;">
                         ← Đổi chủ đề
                     </button>
+                    <button id="submitBtn" class="btn btn-primary" disabled>Xác nhận đáp án</button>
+                    <button id="nextBtn" class="btn btn-secondary" style="display: none;">Câu tiếp theo >></button>
                 </div>
                 <div id="result" class="result" style="display: none;"></div>
             </div>
