--- a/tracnghiem.html
+++ b/tracnghiem.html
@@ -16,7 +16,13 @@
 
         <div class="header">
             <h1 class="title">Hệ thống ôn tập trắc nghiệm thi chứng chỉ hành nghề</h1>
-            <p class="subtitle">Được xây dựng bởi LEDAT 😎</p>
+            <p class="subtitle">Được phát triển bởi LEDAT 😎</p>
+            <div style="display: flex; justify-content: center; align-items: center; margin-top: 8px;">
+                <a href="https://www.facebook.com/harry.twenty3/" target="_blank" style="display: flex; align-items: center; gap: 6px; background: rgba(24,119,242,0.08); border-radius: 18px; padding: 4px 14px; font-size: 0.98em; color: #1877f2; text-decoration: none; font-weight: 500; transition: background 0.2s;">
+                    <svg width="20" height="20" viewBox="0 0 32 32" fill="currentColor" style="margin-right: 4px;"><path d="M29 0h-26c-1.7 0-3 1.3-3 3v26c0 1.7 1.3 3 3 3h13v-12h-4v-5h4v-3.6c0-4.1 2.5-6.4 6.2-6.4 1.8 0 3.6.3 3.6.3v4h-2c-2 0-2.6 1.2-2.6 2.5v3.2h5l-1 5h-4v12h7c1.7 0 3-1.3 3-3v-26c0-1.7-1.3-3-3-3z"/></svg>
+                    <span>Facebook: <b>harry.twenty3</b></span>
+                </a>
+            </div>
         </div>
 
         <div id="selectionSection" class="upload-section">
