- optimize data structer

--- a/tracnghiem.html
+++ b/tracnghiem.html
@@ -80,7 +80,7 @@
                 <div class="question-text" id="questionText"></div>
                 <div class="options" id="optionsContainer"></div>
                 <div class="buttons">
-                    <button onclick="backToSelection()" class="btn" style="background: #6c757d; color: white; margin-right: auto;">
+                    <button id="backButton" class="btn" style="background: #6c757d; color: white; margin-right: auto;">
                         ← Đổi chủ đề
                     </button>
                     <button id="submitBtn" class="btn btn-primary" disabled>Xác nhận đáp án</button>
@@ -102,6 +102,6 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
-    <script src="js/tracnghiem.js"></script>
+    <script type="module" src="js/tracnghiem.js"></script>
 </body>
 </html>
