--- a/phongthi.html
+++ b/phongthi.html
@@ -92,6 +92,6 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
-    <script src="js/phongthi.js"></script>
+    <script type="module" src="js/phongthi.js"></script>
 </body>
 </html> 
