--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bộ công cụ Âu Lạc</title>
     <link rel="stylesheet" href="css/landing_page.css">
-    <link rel="icon" type="image/png" href="logo/AULAC.png">
+    <link rel="icon" type="image/png" href="logo/AULAC_CONS.png">
 
 </head>
 <body>
     <div class="landing-page">
         
         <div class="logo-container">
-            <img src="logo/AULAC.png" alt="Logo Âu Lạc" class="logo">
+            <img src="logo/AULAC_CONS.png" alt="Logo Âu Lạc" class="logo">
         </div>
         
         <h1>Bộ công cụ Âu Lạc</h1>
