--- a/merge_pdf.html
+++ b/merge_pdf.html
@@ -6,7 +6,7 @@
   <title>Công cụ ghép file PDF</title>
   <!-- Link CSS -->
   <link rel="stylesheet" href="css/merge_style.css">
-  <link rel="icon" type="image/png" href="logo/AULAC.png">
+  <link rel="icon" type="image/png" href="logo/AULAC_CONS.png">
   <!-- Thư viện SortableJS -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.14.0/Sortable.min.js"></script>
   <!-- Thư viện pdf-lib -->
@@ -18,7 +18,7 @@
   <div class="container">
 
     <div class="logo-container">
-      <img src="logo/AULAC.png" alt="Logo Âu Lạc" class="logo">
+      <img src="logo/AULAC_CONS.png" alt="Logo Âu Lạc" class="logo">
     </div>
 
     <h1>Công cụ ghép file PDF</h1>
