--- a/phancong.html
+++ b/phancong.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Phân công ca trực</title>
-  <link rel="icon" type="image/png" href="logo/AULAC.png">
+  <link rel="icon" type="image/png" href="logo/AULAC_CONS.png">
   <link rel="stylesheet" href="css/phancong_styles.css">
 </head>
 <body>
   <div class="container">
 
     <div class="logo-container">
-      <img src="logo/AULAC.png" alt="Logo Âu Lạc" class="logo">
+      <img src="logo/AULAC_CONS.png" alt="Logo Âu Lạc" class="logo">
     </div>
 
     <h1>Phân công ca trực</h1>
