--- a/satnhap.html
+++ b/satnhap.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/png" href="logo/AULAC.png">
+  <link rel="icon" type="image/png" href="logo/AULAC_CONS.png">
   <title>Công Cụ Tra Cứu Sát Nhập Tỉnh</title>
   <link rel="stylesheet" href="css/satnhap_style.css">
 </head>
@@ -11,7 +11,7 @@
   <header>
     <div class="container">
       <div class="logo-container">
-        <img src="logo/AULAC.png" alt="Logo Âu Lạc" class="logo">
+        <img src="logo/AULAC_CONS.png" alt="Logo Âu Lạc" class="logo">
       </div>
       <h1>Công Cụ Tra Cứu Sáp Nhập Tỉnh</h1>
       <p>Trà Vinh, Bến Tre, Vĩnh Long</p>
