--- a/tinh_du_toan.html
+++ b/tinh_du_toan.html
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tính định mức chi phí</title>
   <link rel="stylesheet" href="css/tinhdutoan_style.css" />
-  <link rel="icon" type="image/png" href="logo/AULAC.png">
+  <link rel="icon" type="image/png" href="logo/AULAC_CONS.png">
 </head>
 <body>
   <div class="container">
     <div class="logo-container">
-      <img src="logo/AULAC.png" alt="Logo Âu Lạc" class="logo">
+      <img src="logo/AULAC_CONS.png" alt="Logo Âu Lạc" class="logo">
     </div>
     <h1>Tính định mức các chi phí</h1>
 
