--- a/word2excel.html
+++ b/word2excel.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chuyển đổi Word sang Excel</title>
     <link rel="stylesheet" href="css/word2excel.css">
-    <link rel="icon" type="image/png" href="logo/AULAC.png">
+    <link rel="icon" type="image/png" href="logo/AULAC_CONS.png">
 </head>
 <body>
 
     <div class="logo-container">
-        <img src="logo/AULAC.png" alt="Logo Âu Lạc" class="logo">
+        <img src="logo/AULAC_CONS.png" alt="Logo Âu Lạc" class="logo">
     </div>
 
     <h1>Công cụ chuyển đổi file Word sang Excel</h1>
