--- a/giatrican_noisuy.html
+++ b/giatrican_noisuy.html
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nội suy định mức</title>
   <link rel="stylesheet" href="css/giatrinoisuy_style.css">
-  <link rel="icon" type="image/png" href="logo/AULAC.png">
+  <link rel="icon" type="image/png" href="logo/AULAC_CONS.png">
 </head>
 <body>
   <div class="container">
     <div class="logo-container">
-        <img src="logo/AULAC.png" alt="Logo Âu Lạc" class="logo">
+        <img src="logo/AULAC_CONS.png" alt="Logo Âu Lạc" class="logo">
     </div>
     <h1>Công cụ nội suy định mức</h1>
     <form id="interpolationForm">
