--- a/tracnghiem.html
+++ b/tracnghiem.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hệ thống ôn tập trắc nghiệm</title>
     <link rel="stylesheet" href="css/tracnghiem.css">
-    <link rel="icon" type="image/png" href="logo/AULAC.png">
+    <link rel="icon" type="image/png" href="logo/AULAC_CONS.png">
 </head>
 <body>
     <div class="container">
