- update new feature

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <a href="phancong.html" class="button">Phân công ca trực</a>
             <a href="merge_pdf.html" class="button">Ghép file pdf</a>
             <a href="word2excel.html" class="button">Word sang Excel</a>
+            <a href="bandohanhchinh.html" class="button">Bản đồ hành chính</a>
         </div>
     </div>
 </body>
