--- a/satnhap.html
+++ b/satnhap.html
@@ -13,7 +13,7 @@
       <div class="logo-container">
         <img src="logo/AULAC_CONS.png" alt="Logo Âu Lạc" class="logo">
       </div>
-      <h1>Công Cụ Tra Cứu Sáp Nhập Tỉnh</h1>
+      <h1>Công Cụ Tra Cứu Sát Nhập Tỉnh</h1>
       <p>Trà Vinh, Bến Tre, Vĩnh Long</p>
     </div>
   </header>
