--- a/satnhap.html
+++ b/satnhap.html
@@ -59,7 +59,7 @@
 
   <footer>
     <div class="container">
-      <p>&copy; 2025 - Công cụ được phát triển bởi LEDAT</p>
+      <p>&copy; 2025 - Công cụ được phát triển bởi LEDAT 😎</p>
     </div>
   </footer>
 
