- udpate new feature

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p class="dev-text">Dev: LEDAT</p>
         <div class="buttons">
             <a href="tracnghiem.html" class="button">Ôn tập thi chứng chỉ</a>
-            <a href="ppl.html" class="button">Lập Phương pháp luận</a>
+            <a href="ppl.html" class="button">Lập Phương pháp luận tự động</a>
             <a href="satnhap.html" class="button">Tra cứu sáp nhập tỉnh</a>
             <a href="tinh_du_toan.html" class="button">Tính dự toán</a>
             <a href="giatrican_noisuy.html" class="button">Tính giá trị cận nội suy</a>
