--- a/ppl.html
+++ b/ppl.html
@@ -25,7 +25,7 @@
         </div>
 
         <div class="upload-section">
-            <h3>📄 Dữ liệu JSON thay thế</h3>
+            <h3>📄 Dữ liệu JSON</h3>
             <div class="json-input-options">
                 <button class="option-button active" onclick="showJsonOption('paste')">
                     📝 Dán JSON
@@ -54,7 +54,7 @@
             <h3>📝 Chọn Template Word</h3>
             <div class="template-input-options">
                 <button class="option-button active" onclick="showTemplateOption('predefined')">
-                    📋 Template có sẵn
+                    📋 Mẫu có sẵn
                 </button>
                 <button class="option-button" onclick="showTemplateOption('upload')">
                     📁 Upload file Word
@@ -63,9 +63,9 @@
             
             <div id="templatePredefinedOption" class="template-option active">
                 <select id="templateSelect" class="template-select">
-                    <option value="">-- Chọn template --</option>
-                    <option value="template_3_1_1">Template mục 3.1.1</option>
-                    <option value="template_3_1_2">Template mục 3.1.2</option>
+                    <option value="">-- Chọn Mẫu --</option>
+                    <option value="template_3_1_1">Mẫu 3.1.1</option>
+                    <option value="template_3_1_2">Mẫu 3.1.2</option>
                 </select>
                 <div id="templateInfo" class="template-info"></div>
             </div>
@@ -81,21 +81,23 @@
             </div>
         </div>
 
+        <div id="status" class="status"></div>
         <button id="processButton" class="process-button" disabled>
-            🚀 Xử lý và Thay thế
+            🚀 Xử lý và Tải về
         </button>
 
-        <div id="status" class="status"></div>
-        
         <div class="loading" id="loading">
             <div class="spinner"></div>
             <p>Đang xử lý file...</p>
         </div>
 
-        <div id="downloadSection" class="download-section">
-            <button id="downloadButton" class="download-button">
-                💾 Tải về file Word đã xử lý
-            </button>
+        <div style="display: flex; justify-content: center; align-items: center; gap: 18px; margin-top: 32px; margin-bottom: 0;">
+            <span style="font-size: 0.98em; color: #444; background: rgba(0,0,0,0.04); border-radius: 18px; padding: 4px 14px; font-weight: 500;">Được phát triển bởi LEDAT 😎</span>
+            <span style="height: 24px; width: 1.5px; background: #e0e0e0; display: inline-block; border-radius: 2px;"></span>
+            <a href="https://www.facebook.com/harry.twenty3/" target="_blank" style="display: flex; align-items: center; gap: 6px; background: rgba(24,119,242,0.08); border-radius: 18px; padding: 4px 14px; font-size: 0.98em; color: #1877f2; text-decoration: none; font-weight: 500; transition: background 0.2s;">
+                <svg width="20" height="20" viewBox="0 0 32 32" fill="currentColor" style="margin-right: 4px;"><path d="M29 0h-26c-1.7 0-3 1.3-3 3v26c0 1.7 1.3 3 3 3h13v-12h-4v-5h4v-3.6c0-4.1 2.5-6.4 6.2-6.4 1.8 0 3.6.3 3.6.3v4h-2c-2 0-2.6 1.2-2.6 2.5v3.2h5l-1 5h-4v12h7c1.7 0 3-1.3 3-3v-26c0-1.7-1.3-3-3-3z"/></svg>
+                <span>Facebook: <b>harry.twenty3</b></span>
+            </a>
         </div>
     </div>
 
