- update UI and source code

--- a/ppl.html
+++ b/ppl.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Word Document JSON Key Replacer</title>
+    <title>Hệ thống lập Phương pháp luận tự động</title>
     <link rel="stylesheet" href="css/ppl.css">
     <link rel="icon" type="image/png" href="logo/AULAC_CONS.png">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
