--- a/ppl.html
+++ b/ppl.html
@@ -91,6 +91,38 @@
             <p>Đang xử lý file...</p>
         </div>
 
+        <!-- Popup Modal cho kiểm tra thông tin đầu vào -->
+        <div id="inputCheckModal" class="modal">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h3>🔍 Kiểm tra thông tin đầu vào</h3>
+                    <span class="close" id="closeModal">&times;</span>
+                </div>
+                <div class="modal-body">
+                    <div class="check-section">
+                        <h4>📋 Thông tin dự án:</h4>
+                        <div id="projectInfo" class="info-display"></div>
+                    </div>
+                    <div class="check-section">
+                        <h4>📊 Dữ liệu đã ánh xạ:</h4>
+                        <div id="mappingInfo" class="info-display"></div>
+                    </div>
+                    <div class="check-section">
+                        <h4>⚠️ Lưu ý quan trọng:</h4>
+                        <ul class="warning-list">
+                            <li>Vui lòng kiểm tra kỹ tất cả thông tin trước khi tạo Phương pháp luận</li>
+                            <li>Đảm bảo các trường bắt buộc đã được điền đầy đủ</li>
+                            <li>Kiểm tra tính chính xác của dữ liệu đầu vào</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button id="confirmProcess" class="confirm-button">✅ Xác nhận và Tiếp tục</button>
+                    <button id="cancelProcess" class="cancel-button">❌ Hủy bỏ</button>
+                </div>
+            </div>
+        </div>
+
         <div style="display: flex; justify-content: center; align-items: center; gap: 18px; margin-top: 32px; margin-bottom: 0;">
             <span style="font-size: 0.98em; color: #444; background: rgba(0,0,0,0.04); border-radius: 18px; padding: 4px 14px; font-weight: 500;">Được phát triển bởi LEDAT 😎</span>
             <span style="height: 24px; width: 1.5px; background: #e0e0e0; display: inline-block; border-radius: 2px;"></span>
