--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a href="tinh_du_toan.html" class="button">Tính dự toán</a>
             <a href="giatrican_noisuy.html" class="button">Tính giá trị cận nội suy</a>
             <a href="phancong.html" class="button">Phân công ca trực</a>
-            <a href="merge_pdf.html" class="button">Ghép file pdf</a>
+            <a href="gen_report.html" class="button">Tạo báo cáo</a>
             <a href="word2excel.html" class="button">Word sang Excel</a>
         </div>
     </div>
