--- a/gen_report.html
+++ b/gen_report.html
@@ -20,6 +20,7 @@
             min-height: 100vh;
             padding: 20px;
             color: #333;
+            font-size: 16px;
         }
 
         .container {
@@ -48,6 +49,7 @@
             -webkit-background-clip: initial;
             -webkit-text-fill-color: initial;
             background-clip: initial;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
 
         .header p {
@@ -71,6 +73,7 @@
             padding-bottom: 10px;
             border-bottom: 3px solid #1976d2;
             display: inline-block;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
 
         .project-container {
@@ -80,6 +83,8 @@
             margin-bottom: 25px;
             border: 2px solid #e3f2fd;
             transition: all 0.3s ease;
+            font-size: 1rem;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
 
         .project-container:hover {
@@ -99,8 +104,9 @@
             padding: 12px 18px;
             border: 2px solid #ddd;
             border-radius: 10px;
-            font-size: 1.1rem;
+            font-size: 1rem;
             transition: border-color 0.3s ease;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
 
         .project-input:focus {
@@ -118,6 +124,7 @@
             cursor: pointer;
             font-size: 1rem;
             transition: all 0.3s ease;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
 
         .remove-project:hover {
@@ -138,6 +145,8 @@
             padding: 15px;
             transition: all 0.3s ease;
             cursor: pointer;
+            font-size: 1rem;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
 
         .category-item:hover {
@@ -162,6 +171,8 @@
             gap: 10px;
             cursor: pointer;
             font-weight: 500;
+            font-size: 1rem;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
 
         .checkbox-custom {
@@ -200,19 +211,22 @@
             margin-top: 30px;
             padding-top: 30px;
             border-top: 2px solid #e3f2fd;
+            font-size: 1rem;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
 
         .btn {
             padding: 15px 30px;
             border: none;
             border-radius: 12px;
-            font-size: 1.1rem;
+            font-size: 1.2em;
             font-weight: 600;
             cursor: pointer;
             transition: all 0.3s ease;
             margin: 0 10px;
             text-transform: uppercase;
             letter-spacing: 1px;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
 
         .btn-primary {
@@ -247,6 +261,8 @@
             text-align: center;
             font-weight: 500;
             display: none;
+            font-size: 1rem;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
 
         .status.success {
