--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         <div class="buttons">
             <a href="tracnghiem.html" class="button">Ôn tập thi chứng chỉ</a>
             <a href="ppl.html" class="button">Lập Phương pháp luận</a>
+            <a href="gen_report.html" class="button">Tạo Báo cáo Công trình</a>
             <a href="satnhap.html" class="button">Tra cứu sáp nhập tỉnh</a>
             <a href="tinh_du_toan.html" class="button">Tính dự toán</a>
             <a href="giatrican_noisuy.html" class="button">Tính giá trị cận nội suy</a>
             <a href="phancong.html" class="button">Phân công ca trực</a>
-            <a href="gen_report.html" class="button">Tạo báo cáo</a>
             <a href="word2excel.html" class="button">Word sang Excel</a>
         </div>
     </div>
