- update UI and fix bug

--- a/5396681eea50ad639ae3c9f8ca17b7d8.html
+++ b/5396681eea50ad639ae3c9f8ca17b7d8.html
@@ -27,10 +27,10 @@
         <div class="upload-section">
             <h3>📄 Dữ liệu JSON</h3>
             <div class="json-input-options">
-                <button class="option-button active" onclick="showJsonOption('paste')">
+                <button class="option-button active" onclick="showJsonOption('paste')" data-option="paste">
                     📝 Dán JSON
                 </button>
-                <button class="option-button" onclick="showJsonOption('file')">
+                <button class="option-button" onclick="showJsonOption('file')" data-option="file">
                     📁 Chọn file JSON
                 </button>
             </div>
@@ -53,10 +53,10 @@
         <div class="upload-section">
             <h3>📝 Chọn Template Word</h3>
             <div class="template-input-options">
-                <button class="option-button active" onclick="showTemplateOption('predefined')">
+                <button class="option-button active" onclick="showTemplateOption('predefined')" data-option="predefined">
                     📋 Mẫu có sẵn
                 </button>
-                <button class="option-button" onclick="showTemplateOption('upload')">
+                <button class="option-button" onclick="showTemplateOption('upload')" data-option="upload">
                     📁 Upload file Word
                 </button>
             </div>
