--- a/phongthi.html
+++ b/phongthi.html
@@ -93,5 +93,14 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
     <script type="module" src="js/phongthi.js"></script>
+
+    <!-- Nút cuộn lên đầu trang -->
+    <button id="scrollToTopBtn" title="Lên đầu trang để nộp bài">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="28" height="28">
+            <path d="M11.9999 10.8284L7.05016 15.7782L5.63595 14.364L11.9999 8L18.3639 14.364L16.9497 15.7782L11.9999 10.8284Z"></path>
+        </svg>
+        <span>NỘP BÀI</span>
+        <span id="scrollToTopTimer" class="timer-in-btn"></span>
+    </button>
 </body>
 </html> 
