--- a/phongthi.html
+++ b/phongthi.html
@@ -48,6 +48,8 @@
                 <button class="submit-button" id="submitButton">Nộp bài</button>
             </div>
 
+            <div id="examSubjectInfo" class="exam-subject-info"></div>
+
             <div class="questions-container" id="questionsContainer">
                 <!-- Câu hỏi sẽ được tạo bằng JavaScript -->
             </div>
