--- a/tracnghiem.html
+++ b/tracnghiem.html
@@ -75,13 +75,16 @@
                 </div>
             </div>
 
+            <!-- Khu vực hiển thị thông tin môn thi -->
+            <div id="quizSubjectInfo" class="quiz-subject-info"></div>
+
             <div class="question-card">
                 <div class="question-number" id="questionNumber">Câu hỏi #1</div>
                 <div class="question-text" id="questionText"></div>
                 <div class="options" id="optionsContainer"></div>
                 <div class="buttons">
                     <button id="backButton" class="btn" style="background: #6c757d; color: white; margin-right: auto;">
-                        ← Đổi chủ đề
+                        << Đổi chủ đề
                     </button>
                     <button id="submitBtn" class="btn btn-primary" disabled>Xác nhận đáp án</button>
                     <button id="nextBtn" class="btn btn-secondary" style="display: none;">Câu tiếp theo >></button>
