--- a/tracnghiem.html
+++ b/tracnghiem.html
@@ -39,7 +39,7 @@
         </div>
         <!-- Nút vào phòng thi trực tuyến -->
         <div style="display: flex; justify-content: center; margin-top: 18px;">
-            <a href="phongthi.html" style="background: linear-gradient(90deg, #1976d2 60%, #ff9800 100%); color: #fff; font-weight: 600; padding: 14px 36px; border-radius: 14px; font-size: 1.1em; text-decoration: none; box-shadow: 0 2px 8px rgba(25,118,210,0.08); transition: background 0.2s; text-transform: uppercase; letter-spacing: 1px;">
+            <a id="onlineExamBtn" href="phongthi.html" style="background: linear-gradient(90deg, #1976d2 60%, #ff9800 100%); color: #fff; font-weight: 600; padding: 14px 36px; border-radius: 14px; font-size: 1.1em; text-decoration: none; box-shadow: 0 2px 8px rgba(25,118,210,0.08); transition: background 0.2s; text-transform: uppercase; letter-spacing: 1px;">
                 🏆 Vào phòng thi trực tuyến
             </a>
         </div>
