--- a/tracnghiem.html
+++ b/tracnghiem.html
@@ -126,5 +126,13 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
     <script type="module" src="js/tracnghiem.js"></script>
+
+    <!-- Nút cuộn lên đầu trang -->
+    <button id="scrollToTopBtn" title="Về đầu trang">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="28" height="28">
+            <path d="M11.9999 10.8284L7.05016 15.7782L5.63595 14.364L11.9999 8L18.3639 14.364L16.9497 15.7782L11.9999 10.8284Z"></path>
+        </svg>
+        <span>VỀ ĐẦU</span>
+    </button>
 </body>
 </html>
