--- a/tracnghiem.html
+++ b/tracnghiem.html
@@ -104,6 +104,10 @@
             <!-- Chế độ hiển thị toàn bộ câu hỏi -->
             <div id="allQuestionsMode" class="all-questions-container" style="display: none;">
                 <div class="all-questions-searchbar">
+                    <button id="backToSelectionBtn" class="back-to-selection-btn" type="button">
+                        <span class="back-icon">←</span>
+                        <span>Đổi chủ đề</span>
+                    </button>
                     <input type="text" id="allQuestionsSearchInput" placeholder="Tìm kiếm nội dung câu hỏi..." autocomplete="off" />
                     <button id="showAllAnswersBtn" class="show-answers-btn" type="button">Hiển thị đáp án đúng</button>
                 </div>
