--- a/tracnghiem.html
+++ b/tracnghiem.html
@@ -46,8 +46,8 @@
 
         <div id="loadingSection" class="loading-section">
             <div class="section-title">
-                <span>⏳</span>
-                <span>Đang tải dữ liệu...</span>
+                <span>🚀</span>
+                <span>Bạn chờ tí nhé ...</span>
             </div>
             <p class="loading-text" id="loadingText">Đang đọc dữ liệu...</p>
             <div class="loading-bar-container">
@@ -105,7 +105,6 @@
             <div id="allQuestionsMode" class="all-questions-container" style="display: none;">
                 <div class="all-questions-searchbar">
                     <button id="backToSelectionBtn" class="back-to-selection-btn" type="button">
-                        <span class="back-icon">←</span>
                         <span>Đổi chủ đề</span>
                     </button>
                     <input type="text" id="allQuestionsSearchInput" placeholder="Tìm kiếm nội dung câu hỏi..." autocomplete="off" />
