--- a/tracnghiem.html
+++ b/tracnghiem.html
@@ -47,7 +47,7 @@
         <div id="loadingSection" class="loading-section">
             <div class="section-title">
                 <span>🚀</span>
-                <span>Bạn chờ tí nhé ...</span>
+                <span>Bạn chờ xí nha ...</span>
             </div>
             <p class="loading-text" id="loadingText">Đang đọc dữ liệu...</p>
             <div class="loading-bar-container">
