- update button text

--- a/tracnghiem.html
+++ b/tracnghiem.html
@@ -108,7 +108,7 @@
                         <span>Đổi chủ đề</span>
                     </button>
                     <input type="text" id="allQuestionsSearchInput" placeholder="Tìm kiếm nội dung câu hỏi..." autocomplete="off" />
-                    <button id="showAllAnswersBtn" class="show-answers-btn" type="button">Hiển thị đáp án đúng</button>
+                    <button id="showAllAnswersBtn" class="show-answers-btn" type="button">Hiện đáp án</button>
                 </div>
                 <div id="allQuestionsList" class="all-questions-list">
                     <!-- Danh sách câu hỏi sẽ được tạo bằng JavaScript -->
