--- a/bandoso.html
+++ b/bandoso.html
@@ -2,9 +2,10 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
-  <title>Bản đồ Vĩnh Long - GeoJSON</title>
+  <title>Bản đồ Vĩnh Long - AULAC</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
   <link rel="stylesheet" href="css/bandoso.css"/>
+  <link rel="icon" type="image/png" href="logo/AULAC_CONS.png">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
