- update new feature

--- a/bandoso.html
+++ b/bandoso.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
-  <title>Bản đồ Vĩnh Long - AULAC</title>
+  <title>Bản đồ số Vĩnh Long - AULAC</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
   <link rel="stylesheet" href="css/bandoso.css"/>
   <link rel="icon" type="image/png" href="logo/AULAC_CONS.png">
@@ -16,6 +16,9 @@
       <p class="subtitle">Tương tác để xem thông tin từng xã/phường</p>
     </header>
     <div id="map"></div>
+    <div style="display: flex; justify-content: center; margin: 24px 0 0 0;">
+      <button id="locate-btn" class="locate-btn-custom">📍 Xác định vị trí của bạn</button>
+    </div>
     <div style="display: flex; justify-content: center; align-items: center; gap: 18px; margin-top: 32px; margin-bottom: 0;">
       <span style="font-size: 0.98em; color: #444; background: rgba(0,0,0,0.04); border-radius: 18px; padding: 4px 14px; font-weight: 500;">Được phát triển bởi LEDAT 😎</span>
       <span style="height: 24px; width: 1.5px; background: #e0e0e0; display: inline-block; border-radius: 2px;"></span>
