--- a/bandoso.html
+++ b/bandoso.html
@@ -15,10 +15,7 @@
       <h1>Bản đồ số Âu Lạc</h1>
       <p class="subtitle">Tương tác để xem thông tin từng xã/phường</p>
     </header>
-    <div style="display: flex; justify-content: center; align-items: center; margin-bottom: 18px; margin-top: 8px; gap: 8px;">
-      <input id="search-input" type="text" placeholder="Nhập tên xã/phường..." style="padding: 7px 14px; border-radius: 6px; border: 1px solid #ccc; font-size: 1em; width: 240px;">
-      <button id="search-btn" style="padding: 7px 18px; border-radius: 6px; background: #1877f2; color: #fff; border: none; font-size: 1em; font-weight: 500; cursor: pointer;">Tìm kiếm</button>
-    </div>
+    <!-- Đã xoá ô tìm kiếm ở đây -->
     <div id="map"></div>
     <div style="display: flex; justify-content: center; margin: 24px 0 0 0;">
       <button id="locate-btn" class="locate-btn-custom">📍 Xác định vị trí của bạn</button>
